Close output codecs if input codec initialisation fails.

Fixes ticket #1546 and the remaining part of ticket #1244.